# Actix-Template

./: Cargo.toml
src/: main.rs
src/initialization/: mod.rs  sql.rs
src/migrations/sql/: schema.sql
src/models/: mod.rs
src/routes/: mod.rs
src/routes/health/: mod.rs
