[package]
name = "template-actix"
version = "0.1.0"
authors = ["D. Cheatham <7143383+dcheatha@users.noreply.github.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
sqlx = { version = "0.4.2", features = [ "runtime-actix-rustls", "postgres", "chrono",  ] }
sql-builder = "3"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
